--- a/index.html
+++ b/index.html
@@ -13,38 +13,66 @@
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
-	<!-- gmap3 -->
+    <!-- gmap3 -->
     <script src="http://cdn.jsdelivr.net/gmap3/5.1.1/gmap3.min.js"></script>
+
+    <!-- jQuery Validation plugin -->
+    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.12.0/jquery.validate.min.js"></script>
+    
+    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.12.0/additional-methods.min.js"></script>
+
 
 
     <style>
     #yourimage {
-      width: 50%;   
-      // height: 15%;  
-      }
-      #swatches {
-          width: 100%;
-          height: 50px; 
-      }
-      .swatch {
-          width:18%;
-          height: 50px;
-          border-style:solid;
-          border-width:thin;    
-          float: left;
-          margin-right: 3px;    
-      }
+      width: 50%;
+      /*height: 15%;  */
+  }
+  #swatches {
+      width: 100%;
+      height: 50px; 
+  }
+  .swatch {
+      width:18%;
+      height: 50px;
+      border-style:solid;
+      border-width:thin;    
+      float: left;
+      margin-right: 3px;    
+  }
 
-	#map {
- height: 100%;
-        width:100%;
-	}
-      </style>
-  </head>
+  #map {
+   /*height: 100%;*/
+   height: 500px;
 
-  <body>
+   width: 100%;
+}
 
-    <div role="main" class="ui-content">
+img {
+    width: 25%;
+}
+
+img:hover {
+    width: 100%;
+}
+
+label.error {
+    /*float: none; */
+    color: red; 
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 1.4;
+    padding-left: 5px
+}
+
+</style>
+</head>
+
+<body>
+
+    <!-- <div role="main" class="ui-content"> -->
+    <div data-role="content">
+
         <form method="post" enctype="multipart/form-data" action="/upload">
             <input type="file" id = "files" capture="camera" accept="image/*" id="takePictureField" name='image'/>
             <input type="submit" value="submit"/>
@@ -53,53 +81,58 @@
         <h2>Upload to s3</h2>
         <form id="form1" enctype="multipart/form-data" method="post">
             <div class="row">
-                <label for = "IDText">User ID:</label>
-                <input name = "IDText" id = "IDText" type = "text">
+                <fieldset data-role="fieldcontain">
+                    <!-- <label for = "IDText" class="ui-hidden-accessible">User ID:</label> -->
+                    <input name = "IDText" id = "IDText" type = "text" placeholder = "User ID">
+                </fieldset>
 
-                <label for = "ImageNameText">Image name:</label>
-                <input name = "ImageNameText" id = "ImageNameText" type = "text">
+                <fieldset data-role="fieldcontain">
+                    <!-- <label for = "ImageNameText">Image name:</label> -->
+                    <input name = "ImageNameText" id = "ImageNameText" type = "text" placeholder = "Image name">
+                </fieldset>
 
-                <label for = "descText">Description:</label>
-                <input name = "descText" id = "descText" type = "text"> 
+                <fieldset data-role="fieldcontain">
+                    <!-- <label for = "descText">Description:</label> -->
+                    <input name = "descText" id = "descText" type = "text" placeholder = "Description"> 
+                </fieldset>
 
-                <select name="category">
-                    <option selected disabled>Choose category</option>
-                    <option value="animals">Animals</option>
-                    <option value="plants">Plants</option>
-                    <option value="other">Other</option>
-                </select>
-                <label for="file">Select a File to Upload</label>
-                <input type="file" name="file" id="file" capture="camera" accept="image/*" />
-            </div>
+                <fieldset data-role="fieldcontain">
+                    <select name="category">
+                        <option selected disabled>Choose category</option>
+                        <option value="animals">Animals</option>
+                        <option value="plants">Plants</option>
+                        <option value="other">Other</option>
+                    </select>
+                </fieldset>
 
-            <div class="row">
-                <!-- <input type="button" onclick="uploadFile()" value="Upload" /> -->
-                <input type="button" value="Upload" id = "sendButton"/>
+                <fieldset data-role="fieldcontain">
+                    <label for="file">Select a File to Upload</label>
+                    <input type="file" name="file" id="file" capture="camera" accept="image/*" />
+                </fieldset>
 
-            </div>
-            <div id="progressNumber"></div>
-            <input type="button" value="get image" id = "getButton"/>
-        </form>
+                <div class="row">
+                    <!-- <input type="button" value="Upload" id = "sendButton"/> -->
+                    <button type="submit" class="btnLogin" data-theme="a" id="sendButton">Upload</button>
 
-        <img id="yourimage"/>
 
-	<div id = "map"></div> <!-- testing map-->
+                </div>
+                <div id="progressNumber"></div>
+                <input type="button" value="get image" id = "getButton"/>
+            </form>
 
-<!--    <div id="swatches">
-        <div id="swatch0" class="swatch"></div>
-        <div id="swatch1" class="swatch"></div>
-        <div id="swatch2" class="swatch"></div>
-        <div id="swatch3" class="swatch"></div>
-        <div id="swatch4" class="swatch"></div>
-    </div> -->
+            <img id="yourimage"/>
 
-</div>
+            <input type="button" value="show map" id = "mapButton"/>
 
-<script>
-var desiredWidth;
-$(document).ready(function() {
-    console.log('onReady');
-    $("#takePictureField").on("change",gotPic);
+            <div id="map"></div> <!-- testing map-->
+
+        </div>
+
+        <script>
+        var desiredWidth;
+        $(document).ready(function() {
+            console.log('onReady');
+            $("#takePictureField").on("change",gotPic);
         // $("#yourimage").load(getSwatches);
         desiredWidth = window.innerWidth;
 
@@ -108,13 +141,13 @@ $(document).ready(function() {
         }
     });
 
-function getSwatches(){
-    var colorArr = createPalette($("#yourimage"), 5);
-    for (var i = 0; i < Math.min(5, colorArr.length); i++) {
-        $("#swatch"+i).css("background-color","rgb("+colorArr[i][0]+","+colorArr[i][1]+","+colorArr[i][2]+")");
-        console.log($("#swatch"+i).css("background-color"));
-    }
-}
+        function getSwatches(){
+            var colorArr = createPalette($("#yourimage"), 5);
+            for (var i = 0; i < Math.min(5, colorArr.length); i++) {
+                $("#swatch"+i).css("background-color","rgb("+colorArr[i][0]+","+colorArr[i][1]+","+colorArr[i][2]+")");
+                console.log($("#swatch"+i).css("background-color"));
+            }
+        }
 
     //Credit: https://www.youtube.com/watch?v=EPYnGFEcis4&feature=youtube_gdata_player
     function gotPic(event) {
@@ -158,48 +191,75 @@ $("#yourimage").attr("src", src);
 
 })*/
 
+/* Form validation... */
+$("#form1").validate({
+    rules: {
+        IDText: {
+            required: true
+        },
+        ImageNameText: {
+            required: true
+        },
+        descText: {
+            required: true,
+            minlength: 5
+        },
+        file: {
+            required: true
+        }
+    }
+});
+
+/* post form info to server */
 $("#sendButton").bind("click", function (event, ui) {
     var url = "http://intense-harbor-6396.herokuapp.com/upload";
     // var url = "http://localhost:3000/upload";
     var file = document.getElementById('file').files[0];
     var key = "events/" + (new Date).getTime() + '-' + file.name; //uploads to this folder and name
-    uploadFile(key); //call so can upload file to S3
-
     var id = $("#IDText").val();
     var imageName = $("#ImageNameText").val();
     var desc = $("#descText").val();
     var imgURL = "https://exploretasman.s3.amazonaws.com/" + key;
 
-var getURL = function() {
-	return imgURL;
+
+// if any fields are empty then cant upload
+if (!id || !imageName) {
+    alert("Some fields are empty and need to be filled out! >:)");
 }
 
-    var inJSON = {"id": id, "imageName": imageName, "description": desc, "url": imgURL};
-    console.log("posting: ", inJSON)
+else {
+    uploadFile(file, key); //call so can upload file to S3
+
+    var getURL = function() {
+       return imgURL;
+   }
+
+   var inJSON = {"id": id, "imageName": imageName, "description": desc, "url": imgURL};
+   console.log("posting: ", inJSON);
 
     // sending to server
     $.post(url, inJSON, function (data) {
     }, "json");
 
-$("#getButton").bind("click", function (event, ui) {
-    var url = "http://intense-harbor-6396.herokuapp.com/url";
+    // testing to show img on page
+    $("#getButton").bind("click", function (event, ui) {
+        var url = "http://intense-harbor-6396.herokuapp.com/url";
     // var url = "http://localhost:3000/url";
     /*$.get(url, function(data) {
         $("#yourimage").attr("src", data.url); //display image....
     })*/
 
-	var src = getURL();
-$("#yourimage").attr("src", src);
-
+    var src = getURL();
+    $("#yourimage").attr("src", src);
 })
+}
+
 });
 
 // uploading file to s3 bucket
-function uploadFile(key) {
+function uploadFile(file, key) {
     var fd = new FormData();
-    var file = document.getElementById('file').files[0];
-
-    // var key = "events/" + (new Date).getTime() + '-' + file.name; //uploads to this folder and name
+    // var file = document.getElementById('file').files[0];
     fd.append('key', key);
     fd.append('acl', 'public-read'); 
     fd.append('Content-Type', file.type);      
@@ -257,103 +317,119 @@ var secret64 = "dG1MRDNQOEl3ZlVic1hxN3Y4NzFldmJaeWplaDE1dkVudk1ZbEZHZw==";
 var secret = window.atob(secret64);
 
 var policy = JSON.stringify(POLICY_JSON);
-// var policyBase64 = Base64.encode(policy);
 var policyBase64 = window.btoa(policy);
-// var policyBase64 = "eyJleHBpcmF0aW9uIjoiMjAyMC0xMi0wMVQxMjowMDowMC4wMDBaIiwiY29uZGl0aW9ucyI6W3siYnVja2V0IjoiZXhwbG9yZXRhc21hbiJ9LFsic3RhcnRzLXdpdGgiLCIka2V5IiwiIl0seyJhY2wiOiJwdWJsaWMtcmVhZCJ9LFsic3RhcnRzLXdpdGgiLCIkQ29udGVudC1UeXBlIiwiIl0sWyJjb250ZW50LWxlbmd0aC1yYW5nZSIsMCw1MjQyODgwMDBdXX0=" 
 
-// var signature = "373d4d4a847056a79c9f80a86a6875ee6bb89f08"
-// var signature = crypto.createHmac('sha1', secret).update(policyBase64).digest('base64');
+
 
 /* GMAP STUFF */
 
-mapStuff();
+$("#mapButton").bind("click", function (event, ui) {
 
-function mapStuff() {
-var imageURL =  "https://exploretasman.s3.amazonaws.com/events/1402248566277-icon.png";
-        var content = "<h4>Frenchman Bay</h4><br><img src ='"+imageURL+"'/>";
+    // var url = "http://intense-harbor-6396.herokuapp.com/gps";
+    var url = "http://localhost:3000/gps";
+    var data = [];
 
-        var img = "https://s3-us-west-2.amazonaws.com/exploretasman/events/1402371857544-image.jpg";
-        var content1 = "<h4>Abel Tasman</h4><br><img src ='"+img+"'/>";
+/*$.get(url, function(data) {
+        $("#yourimage").attr("src", data.url); //display image....
+    })*/
 
-        var diffIcon = "http://maps.google.com/mapfiles/marker_green.png";
-        var icon = "https://maps.google.com/mapfiles/kml/shapes/"
+    $.get(url, function (gps) {
+        data = gps;
+        console.log("Data: ", data)
+        mapStuff(data)
+    })
+})
 
-var data = [{
-            "address": "-40.9206539,173.0071976",
-            "content": content,
-            "status": "live",
-            icon: diffIcon
-        }, {
-            "address": "-40.921829,173.057123",
-            "content": content1,
-            icon: icon + "schools_maps.png"
-        }, {
-            "address": "-40.939611,173.061179",
-            "content": "Abel Tasman Walkway"
-        }, {
-            "address": "-40.939611,173.117179",
-            "content": "Abel Tasman boat",
-            icon: icon + "info-i_maps.png"
-        }];
+function mapStuff(data) {
+    /*
+    var imageURL = "https://exploretasman.s3.amazonaws.com/events/1402248566277-icon.png";
+    var content = "<h4>Frenchman Bay</h4><br><img src ='" + imageURL + "'/>";
+
+    var img = "https://s3-us-west-2.amazonaws.com/exploretasman/events/1402371857544-image.jpg";
+    var content1 = "<h4>Abel Tasman</h4><br><img src ='" + img + "'/>";
+
+    var diffIcon = "http://maps.google.com/mapfiles/marker_green.png";
+    var icon = "https://maps.google.com/mapfiles/kml/shapes/";
+
+    var data = [{
+        "address": "-40.9206539,173.0071976",
+        "content": content,
+        "status": "live",
+        icon: diffIcon
+    }, {
+        "address": "-40.921829,173.057123",
+        "content": content1,
+        icon: icon + "schools_maps.png"
+    }, {
+        "address": "-40.939611,173.061179",
+        "content": "Abel Tasman Walkway"
+    }, {
+        "address": "-40.939611,173.117179",
+        "content": "Abel Tasman boat",
+        icon: icon + "info-i_maps.png"
+    }];*/
+
+    console.log("DAta here", data)
 
 
-        var $map = $("#map");
+    var $map = $("#map");
 
-        // Gmap Defaults
-        $map.gmap3({
-            map:{
-                options:{
-                    center:[-40.930, 173.050],
-                    zoom: 12,
-                    disableDefaultUI:true,
-                    // bounds: {n:-40.793657, e:173.075851, s:-41.005412, w:172.834839},
-                }
-            }
-        });
-
-// Json Loop
-$.each(data, function(key, val) {
+    // Gmap Defaults
     $map.gmap3({
-        marker:{
-            values:[{
-                address:val.address,
-                options: {
-                    icon: val.icon,
-                },
-                events: {
-                    click: function (marker, event, context) {
-                        gmap_clear_markers();
-                        $map.gmap3({
-                            map:{
-                              options: {
-                            // center:event.latLng
-                        }
-                    }
-                });
-                        var infowindows = $(this).gmap3({
-                            infowindow:{
-                                address:val.address,
-                                options:{
-                                    content: '<div class="infobox">'+val.content+'</div>',
-                                    offset:{
-                                        y:-32,
-                                        x:12
-                                    }
-                                }
-                            }
-                        });
-                    }
-                }
-            }]
+        map: {
+            options: {
+                center: [-40.9382511,172.9681819],
+                zoom: 12,
+                minZoom: 11,
+                disableDefaultUI: true,
+                // bounds: {n:-40.793657, e:173.075851, s:-41.005412, w:172.834839},
+            }
         }
     });
+
+    // Json Loop
+    $.each(data, function (key, val) {
+        $map.gmap3({
+            marker: {
+                values: [{
+                    address: val.address,
+                    options: {
+                        icon: val.icon,
+                    },
+                    events: {
+                        click: function (marker, event, context) {
+                            gmap_clear_markers();
+                            $map.gmap3({
+                                map: {
+                                    options: {
+                                        // center:event.latLng
+                                    }
+                                }
+                            });
+                            var infowindows = $(this).gmap3({
+                                overlay: {
+                                    address: val.address,
+                                    options: {
+                                        content: '<div class="infobox">'+val.content+'</div>',
+                                        offset: {
+                                            y: -32,
+                                            x: 12
+                                        }
+                                    }
+                                }
+                            });
+                        }
+                    }
+                }]
+            }
+        });
 });
-// Function Clear Markers
-function gmap_clear_markers() {
-    $('.infobox').each(function() {
-        $(this).remove();
-    });
-}
+    // Function Clear Markers
+    function gmap_clear_markers() {
+        $('.infobox').each(function () {
+            $(this).remove();
+        });
+    }
 
 }
 </script>
